# shadow-launcher

./: .gitignore  LICENSE  PROJECT_INDEX.md  README.md  ShadowLauncher问题分析报告.docx  bug_report.md  commit_and_status.ps1  fix_line.py  fixmap.json  install_cli.py  launch_audit.md  nuitka-crash-report.xml  patch_all_toasts.py  requirements.txt  run_git.ps1  run_qml.py  scan_toasts.py  testing_click.py  tmp_cmd.bat  ~$开发历史.docx  开发历史.docx  开发历史.md
cpp/: .gitignore  CMakeLists.txt  _opencode_prompt.md  _scan.py  _scan2.py  _scan_dl.py  _scan_refresh.py  pack.ps1  resources.qrc  screenshot_check.py  temp_base.qml  test_font.qml  test_minimal.cpp  test_minimal_qt.cpp  test_qt_min.cpp
cpp/ShadowLauncher_v1.0.1/qml/: DownloadPage.qml  InstallConfigOverlay.qml  MainWindow.qml
cpp/ShadowLauncher_v1.0.2/qml/: VersionSelectPage.qml  VersionSettingsPage.qml
cpp/ShadowLauncher_v1.0.3/qml/: DownloadPage.qml  MainWindow.qml  ShadowButton.qml  SubPageOverlays.qml
cpp/ShadowLauncher_v1.0.4/qml/: DownloadPage.qml  HomePage.qml  SettingsPage.qml
cpp/ShadowLauncher_v1.0.5/qml/: KillButton.qml
cpp/build3/: .ninja_deps  .ninja_log  CMakeCache.txt  build.ninja  cmake_install.cmake
cpp/build3/.qt/: QtDeploySupport.cmake
cpp/build3/.qt_plugins/: Qt6_QmlPlugins_Imports_ShadowLauncher.cmake  Qt6_QmlPlugins_Imports_ShadowLauncher.rsp
cpp/build3/.rcc/: qmake_ShadowLauncher.qrc  qrc_qmake_ShadowLauncher.cpp
cpp/build3/ShadowLauncher/: ShadowLauncher_qml_module_dir_map.qrc  qmldir
cpp/build3/ShadowLauncher_autogen/: deps  moc_predefs.h  mocs_compilation.cpp
cpp/build3/meta_types/: ShadowLauncher_json_file_list.txt  ShadowLauncher_json_file_list.txt.timestamp
cpp/build3/qmltypes/: ShadowLauncher_foreign_types.txt
cpp/build4/: ALL_BUILD.vcxproj  CMakeCache.txt  INSTALL.vcxproj  INSTALL.vcxproj.filters  ShadowLauncher.sln  ShadowLauncher.vcxproj  ShadowLauncher.vcxproj.filters  ShadowLauncher_autogen.vcxproj  ShadowLauncher_autogen.vcxproj.filters  ShadowLauncher_automoc_json_extraction.vcxproj  ShadowLauncher_automoc_json_extraction.vcxproj.filters  ShadowLauncher_qmlimportscan.vcxproj  ShadowLauncher_qmlimportscan.vcxproj.filters  ShadowLauncher_qmllint.vcxproj  ShadowLauncher_qmllint.vcxproj.filters  ShadowLauncher_qmllint_json.vcxproj  ShadowLauncher_qmllint_json.vcxproj.filters  ShadowLauncher_qmllint_module.vcxproj  ShadowLauncher_qmllint_module.vcxproj.filters  ShadowLauncher_qmltyperegistration.vcxproj  ShadowLauncher_qmltyperegistration.vcxproj.filters  ShadowLauncher_tooling.vcxproj  ShadowLauncher_tooling.vcxproj.filters  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  all_qmllint.vcxproj  all_qmllint.vcxproj.filters  all_qmllint_json.vcxproj  all_qmllint_module.vcxproj  all_qmltyperegistrations.vcxproj  cmake_install.cmake  shadowlauncher_qmltyperegistrations.cpp
cpp/build4/.qt/: QtDeploySupport-Debug.cmake  QtDeploySupport-MinSizeRel.cmake  QtDeploySupport-RelWithDebInfo.cmake  QtDeploySupport-Release.cmake
cpp/build4/.qt_plugins/: Qt6_QmlPlugins_Imports_ShadowLauncher.cmake  Qt6_QmlPlugins_Imports_ShadowLauncher.rsp
cpp/build4/.rcc/: ShadowLauncher_raw_qml_0.qrc  qmake_ShadowLauncher.qrc  qrc_ShadowLauncher_raw_qml_0.cpp  qrc_qmake_ShadowLauncher.cpp
cpp/build4/Release/: ShadowLauncher.exp  ShadowLauncher.lib
cpp/build4/ShadowLauncher/: ShadowLauncher_qml_module_dir_map.qrc
cpp/build4/ShadowLauncher_autogen/: mocs_compilation_Release.cpp
cpp/build4/meta_types/: ShadowLauncher_json_file_list.txt  ShadowLauncher_json_file_list.txt.timestamp  qt6shadowlauncher_metatypes.json
cpp/i18n/: shadow_zh_CN.ts  shadow_zh_HK.qm  shadow_zh_HK.ts  shadow_zh_HK.ts.ts  shadow_zh_TW.qm  shadow_zh_TW.ts
cpp/qml/: AgreementOverlay.qml  AnimationTokens.qml  BackButton.qml  BackgroundCropOverlay.qml  BetaKeyDialog.qml  ConfirmDialog.qml  CrashDialog.qml  DebugPanel.qml  DebugWindow.qml  DetailInfoCard.qml  DetailVersionCard.qml  DownloadCard.qml  DownloadCardTagRow.qml  DownloadFilterCard.qml  DownloadPage.qml  DownloadProgressPage.qml  ExpandableGroupCard.qml  HomePage.qml  InstallConfigOverlay.qml  InstallPage.qml  JavaPage.qml  KillButton.qml  LaunchOverlay.qml  MainWindow.qml  McTab.qml  MinecraftHead2D.qml  MinecraftHead3D.qml  ModDetailPage.qml  ModLoaderCard.qml  ModTab.qml  ModpackImportOverlay.qml  MultiplayerPage.qml  Phase1Main.qml  RefreshButton.qml  ResourcePackDetailPage.qml  RpTab.qml  SearchBox.qml  SettingsExperimentalPage.qml  SettingsGeneralPage.qml  SettingsJavaPage.qml  (+25 more)
cpp/qml/agreements/: beta_agreement.html  privacy_policy.html  terms_of_service.html
cpp/src/: check_libs.py  fix_neoforge_json.py  main.cpp  replace_download.py
cpp/src/backend/: _restored.cpp  _vbc.cpp  account_backend.cpp  account_backend.h  app_backend.cpp  app_backend.h  check_backend.cpp  check_backend.h  java_backend.cpp  launch_backend.cpp  launch_backend.h  login_type.h  resource_backend.cpp  resource_backend.h  settings_backend.cpp  settings_backend.h  shadow_backend.cpp  shadow_backend.h  stats_backend.cpp  version_backend.cpp  version_backend.h  yggdrasil_backend.cpp  yggdrasil_backend.h
cpp/src/core/: cef_login_app.cpp  cef_login_app.h  crash_detector.cpp  crash_detector.h  download_coordinator.cpp  download_coordinator.h  downloader.cpp  downloader.h  file_downloader.cpp  http_client.cpp  http_client.h  icon_cache.cpp  icon_cache.h  launcher.cpp  launcher.h  local_mod_manager.cpp  logger.cpp  logger.h  mc_language.cpp  microsoft_auth.cpp  microsoft_auth.h  mod_loader_installer.cpp  mod_loader_installer.h  mod_manager.cpp  mod_manager.h  parallel_downloader.cpp  parallel_downloader.h  progress_tracker.cpp  progress_tracker.h  update_manager.cpp  update_manager.h  version_downloader.cpp  version_downloader.h  version_isolation.cpp  version_isolation.h  version_manager.cpp  version_manager.h  yggdrasil_auth.cpp  yggdrasil_auth.h
cpp/src/multiplayer/: easytier_process.cpp  easytier_process.h  elevated_session.cpp  elevated_session.h  encrypted_addr_offsets.h  encrypted_frag_1.h  encrypted_frag_2.h  encrypted_frag_3.h  (+7 more)
cpp/tools/: render_head_func.txt  translate_logs.py
(+191 files in other folders)
